# plasma-workspace

appmenu/: CMakeLists.txt  appmenu.cpp  verticalmenu.cpp  verticalmenu.h
components/: CMakeLists.txt
components/containmentlayoutmanager/: abstractlayoutmanager.cpp  abstractlayoutmanager.h  appletcontainer.cpp  appletcontainer.h  appletslayout.cpp  appletslayout.h  configoverlay.cpp  configoverlay.h  gridlayoutmanager.cpp  gridlayoutmanager.h  itemcontainer.cpp  itemcontainer.h  resizehandle.cpp  resizehandle.h
components/containmentlayoutmanager/qml/: BasicAppletContainer.qml
components/containmentlayoutmanager/qml/private/: BasicResizeHandle.qml
components/sessionsprivate/: CMakeLists.txt  sessionsprivateplugin.cpp
containmentactions/contextmenu/: menu.cpp  menu.h
dataengines/powermanagement/: powermanagementjob.cpp  powermanagementjob.h
ksmserver/: CMakeLists.txt  logout.cpp  main.cpp  org.kde.KSMServerInterface.xml  server.cpp  server.h  shutdown.cpp
libkworkspace/: CMakeLists.txt  kworkspace.cpp  kworkspace.h  loginddbustypes.h  sessionmanagement.cpp  sessionmanagement.h  sessionmanagementbackend.cpp  sessionmanagementbackend.h  sessionsmodel.cpp  sessionsmodel.h
libkworkspace/tests/: sessiontest.cpp
runners/sessions/: sessionrunner.cpp
startkde/: CMakeLists.txt  startplasma-wayland.cpp  startplasma-waylandsession.cpp  startplasma-x11.cpp  startplasma.cpp
startkde/ksession/: CMakeLists.txt  shutdown.cpp  startup.cpp  startup.h
startkde/plasma-session/: CMakeLists.txt  startup.cpp  startup.h
startkde/waitforname/: CMakeLists.txt
(+2 files in other folders)
